# aidjango

./: pyproject.toml
src/aidjango/: __init__.py  factorial.py  leap_year.py  task_manager.py
