[project]
name = "aidjango"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "andreas_werdich@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
aidjango = "aidjango:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
