[project]
name = "aidjango"
dynamic = ["version"]
description = "An AI-Generated Django Project"
readme = "README.md"
authors = [
    { name = "Andreas Werdich", email = "andreas_werdich@hms.harvard.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.6",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[project.scripts]
aidjango = "aidjango:main"

[build-system]
requires = ["setuptools>=41, <81", 
            "wheel", 
            "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-preference = "system"

[tool.setuptools.package-data]
# include VERSION file to a package
aidjango = ["VERSION"]

[tool.setuptools]
# this package will read some included files in runtime, avoid installing it as .zip
zip-safe = false

[tool.setuptools-git-versioning]
enabled = true
version_file = "aidjango/VERSION"

